# bookme

./: .deployment  .env  .gitignore  LICENSE  api_docs.py  db.sqlite3  manage.prod.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: dev-drf_bookme-prod.yml  dev-drf_bookme.yml  prod.yml
api/: decorators.py  urls.py  utils.py  validation.py  views.py
bookme/: asgi.prod.py  asgi.py  urls.py  utils.py  wsgi.py  wsgi_prod.py
bookme/conf/: common.py  dev.py  prod.py
core/: admin.py  api_docs.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_initial.py  0002_user_is_host_order.py  0003_order_order_id_alter_order_payment_id.py
host/: admin.py  decorators.py  models.py  serializers.py  urls.py  views.py
host/migrations/: 0001_initial.py  0002_turf_sport.py  0003_sport_remove_turf_sport_turf_sport_prices_and_more.py  0004_remove_turf_sport_prices.py  0005_booking_is_offline.py  0006_booking_verified.py
sportshunt/: asgi.prod.py  asgi.py  settings.py  urls.py  wsgi.py  wsgi_prod.py
sportshunt/config/: common.py  dev.py
static/css/core/: base.css
static/css/core/pages/: index.css  profile.css  turf.css  venue.css
static/css/host/: base.css
static/css/host/pages/: create_turf.css  create_venues.css  dashboard.css  turf.css  venue.css
static/js/core/pages/: create_turf.js  index.js
templates/core/: base.html
templates/core/pages/: index.html  profile.html  turf.html  venue.html  venue_filter.html
templates/host/: base.html
templates/host/pages/: create_turf.html  create_venues.html  dashboard.html  turf.html  venue.html
