[project]
name = "book-me"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.7",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.15.2",
    "drf-yasg>=1.21.10",
    "python-dotenv>=1.1.0",
    "python-jose>=3.4.0",
    "razorpay>=1.4.2",
    "setuptools>=78.1.0",
    "social-auth-app-django>=5.4.3",
]
