[project]
name = "book-me"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "cryptography==44.0.2",
    "defusedxml==0.7.1",
    "django==5.2",
    "django-cors-headers==4.7.0",
    "djangorestframework==3.16.0",
    "drf-yasg==1.21.10",
    "ecdsa==0.19.1",
    "idna==3.10",
    "inflection==0.5.1",
    "oauthlib==3.2.2",
    "packaging==24.2",
    "pyasn1==0.4.8",
    "pycparser==2.22",
    "pyjwt==2.10.1",
    "python-dotenv==1.1.0",
    "python-jose==3.4.0",
    "python3-openid==3.2.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "razorpay==1.4.2",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rsa==4.9",
    "setuptools==78.1.0",
    "six==1.17.0",
    "social-auth-app-django==5.4.3",
    "social-auth-core==4.5.6",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
    "uritemplate==4.1.1",
    "urllib3==2.3.0"
]
